welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (vuBiscuit=true)
                        ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (vuBiscuit=true)
        ^